Updated to fix demo, works now with CR1.